# fast-template

./: .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  manage.sh  nginx.conf  pyproject.toml
project/: .env.example  alembic.ini  main.py  routers.py  settings.py
project/migrations/: env.py
project/migrations/versions/: 827992a453a4_init.py
project/src/: __init__.py
project/src/account/: manager.py  schemas.py  views.py
project/src/account/models/: __init__.py  account.py  session.py
project/src/database/: database.py  models.py  schemas.py  types.py
